# code-rag

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  REPORT.md  pyproject.toml
.github/workflows/: ci.yml
assets/rag_data/: Andrew-Ng-Sparse_Autoencoder.md  Goodfellow-Explaining_and_harnessing_adversarial_examples.md  Nanda-Progress_measures_for_grokking.md
assets/rag_data/derivations/: MLP.lean  Perceptron.lean  Signomial.lean
src/code_rag/: __init__.py  __main__.py  chunk_router.py  chunker.py  cli.py  code_chunker.py  config.py  embeddings.py  enrichment.py  indexer.py  ingest.py  lean_chunker.py  models.py  plaintext_chunker.py  pointer_index.py  protocols.py  server.py
src/code_rag/chunkers/: __init__.py  _shared.py  code.py  lean.py  markdown.py  plaintext.py  python.py
src/code_rag/eval/: __init__.py  dataset.py  line_chunker.py  metrics.py  report.py  runner.py
src/code_rag/providers/: __init__.py  fake.py  openrouter.py  qdrant.py
tests/: conftest.py  test_config.py  test_enrichment_live.py  test_enrichment_prompt.py  test_eval_metrics.py  test_eval_report.py  test_ingest.py  test_pointer_index.py  test_registry.py  test_server_format.py  test_snapshots.py
tests/eval/: .gitignore  docker-compose.yml  golden_dataset.json  rag-config.json
tests/eval/corpus/: metrics.py
tests/eval/corpus/papers/: Bottou-Optimization_Methods_for_Large_Scale_ML_part1.md  Bottou-Optimization_Methods_for_Large_Scale_ML_part2.md  Hutter-Decoupled_Weight_Decay_Regularization.md  Miyato-Spectral_Normalization_For_Generative_Adversarial_Networks.md
tests/fixtures/: sample.lean  sample.md  sample.py  sample.txt
tests/fixtures/expected/: sample_lean_chunks.json  sample_md_chunks.json  sample_py_chunks.json  sample_txt_chunks.json
tests/test_chunkers/: test_code.py  test_lean.py  test_line.py  test_markdown.py  test_plaintext.py  test_python.py
