[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-rag"
version = "0.2.0"
description = "MCP server for code and document RAG with AST-aware chunking and Qdrant"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "qdrant-client",
    "httpx",
    "python-dotenv",
    "pydantic>=2",
    "tree-sitter>=0.24.0",
    "tree-sitter-language-pack>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.11",
    "mypy>=1.10",
]

[project.scripts]
code-rag = "code_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_rag"]

[tool.ruff]
target-version = "py311"
line-length = 100
# The eval corpus is third-party sample data (torch/micrograd/Mathlib), not our
# source — never lint or format it.
extend-exclude = ["tests/eval/corpus"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "BLE",  # flake8-blind-except (catches bare `except Exception`)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true    # tree-sitter and MCP stubs are incomplete
disallow_untyped_defs = true     # every function must be annotated
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that require external services (deselect with '-m not live')",
]
