[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-rag"
version = "0.2.0"
description = "MCP server for code and document RAG with AST-aware chunking and Qdrant"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "qdrant-client",
    "httpx",
    "python-dotenv",
    "pydantic>=2",
    # Pinned: tree-sitter's parse() API flipped from bytes to str after 0.25.2,
    # which broke CI on 3.12 (newer wheel) while 3.11 still resolved an older one.
    # Our chunkers pass bytes; keep the whole matrix on the tested, bytes combo.
    "tree-sitter==0.25.2",
    "tree-sitter-language-pack==1.3.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # Pinned: CI installs these fresh on every run, so unpinned versions mean
    # a run can go red without any change to our code (ruff's formatter output
    # and mypy's parser both shift between releases). Bump deliberately: update
    # the pin, run the full gate locally, commit both together.
    "ruff==0.15.21",
    "mypy==2.2.0",
]

[project.scripts]
code-rag = "code_rag.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_rag"]

[tool.ruff]
target-version = "py311"
line-length = 100
# The eval corpus is third-party sample data (torch/micrograd/Mathlib), not our
# source — never lint or format it.
extend-exclude = ["tests/eval/corpus"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "BLE",  # flake8-blind-except (catches bare `except Exception`)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true    # tree-sitter and MCP stubs are incomplete
disallow_untyped_defs = true     # every function must be annotated
check_untyped_defs = true

# numpy arrives transitively via qdrant-client; we never import it. Its stubs
# use 3.12-only `type` syntax, which is a hard parse error under our 3.11
# target, so skip the stubs entirely rather than following the import.
[[tool.mypy.overrides]]
module = ["numpy", "numpy.*"]
follow_imports = "skip"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "live: marks tests that require external services (deselect with '-m not live')",
]